# tc-release

./: .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tc_release.py
.github/: CODEOWNERS
.github/workflows/: standard.yml
conda-recipe/: meta.yaml
tc_release/: __init__.py  __main__.py  _version.py  tc_release.py  tcgvl.txt
tc_release/tests/: test_make_release.py  test_pass.py
tc_release/tests/artifacts/: artifacts.txt
