[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=45", "setuptools_scm[toml]>=6.2",]

[project]
classifiers = [ "Development Status :: 2 - Pre-Alpha", "Natural Language :: English", "Programming Language :: Python :: 3",]
description = "A TwinCAT project release tool"
dynamic = [ "version", "readme", "dependencies", "optional-dependencies",]
keywords = []
name = "tc_release"
requires-python = ">=3.9"
[[project.authors]]
name = "SLAC National Accelerator Laboratory"

[options]
zip_safe = false
include_package_data = true

[project.license]
file = "LICENSE"

[project.scripts]
tc-release = "tc_release.tc_release:main"

[tool.setuptools_scm]
write_to = "tc_release/_version.py"

[tool.setuptools.packages.find]
where = [ ".",]
include = [ "tc_release*",]
namespaces = false

[tool.setuptools.dynamic.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools.dynamic.dependencies]
file = [ "requirements.txt",]

[tool.setuptools.dynamic.optional-dependencies.test]
file = "dev-requirements.txt"
